# cs315HuffmanP3

./: BinSearchTree.cpp  BinSearchTree.hpp  CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.hpp  PriorityQueue.cpp  PriorityQueue.hpp  README.md  Scanner.cpp  TreeNode.hpp  compile_and_test_project3_final_version.bash  copy_files.bash  huff_phase2  huffman_part2  main.cpp  p3_complete.x
input_output/: TheBells.freq  for_the_love_of_a_man.freq  into_the_primitive.freq  lab08_input.freq  tableOfContents_TheCallOfWild.freq  the_call_of_the_wild.freq  the_dominant_primordial_beast.freq  the_law_of_club_and_fang.freq  the_sounding_of_the_call.freq  the_toil_of_trace_and_trail.freq  who_has_won_to_mastership.freq
